# utilityx

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  pyproject.toml
cmake/: CPM.cmake  Cache.cmake  CodeCoverage.cmake  Coverage.cmake  LTO.cmake  StaticAnalyzers.cmake  Warnings.cmake
data/: README.md
docs/: README.md
examples/: README.md
examples/example1/: CMakeLists.txt  README.md  example1.cpp
include/: README.md  UtilityX.h  xTemplate.h
scripts/: README.md
src/: README.md  UtilityX.cpp  xTemplate.cpp
tests/: CMakeLists.txt  README.md
tests/unit_tests/: CMakeLists.txt  testAbs.cpp  testClamp.cpp  testConstrain.cpp  testMax.cpp  testMin.cpp  testSign.cpp
